# tabforge

./: README.md  pyproject.toml
example/: .gitignore  latexmkrc  paper.tex
example/tables/: example.csv  example.g.tex  example.t.tex  example.tex
tabforge/: error.py  filters.py  main.py  render.py
