[tool.poetry]
name = "tabforge"
version = "0.0.4"
description = ""
authors = ["Wenyu Zhao <wenyuzhaox@gmail.com>"]
readme = "README.md"
packages = [{ include = "tabforge" }]

[tool.poetry.scripts]
tabforge = "tabforge.main:main"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
jinja2 = "^3.1.4"
numpy = "^1.26.4"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
